# ogum-ml

./: .env.example  Dockerfile.release  README.md  requirements.txt
.github/workflows/: create_release.yml  release.yml  release_check.yml
ogum-ml-lite/: .gitignore  CITATION.cff  LICENSE  README.md  ROADMAP.md  environment.yml  pyproject.toml  requirements.txt
ogum-ml-lite/.github/workflows/: ci.yml  release.yml
ogum-ml-lite/app/: __init__.py  gradio_app.py  gradio_jobs.py  page_edu.py  presets.yaml  streamlit_app.py  streamlit_server.py
ogum-ml-lite/app/config/profiles/: cold.yaml  conventional.yaml  flash.yaml  fs_uhs.yaml  heating_only.yaml  outro.yaml  sps.yaml  two_step.yaml
ogum-ml-lite/app/config/themes/: base.yaml  custom.example.yaml  dark.yaml
ogum-ml-lite/app/design/: a11y.py  ab_variants.py  components.py  layout.py  theme.py
ogum-ml-lite/app/edu/: __init__.py  components.py  exercises.py  exporter.py  simulators.py
ogum-ml-lite/app/i18n/: translate.py
ogum-ml-lite/app/i18n/locales/: en.json  pt.json
ogum-ml-lite/app/pages/: __init__.py  page_compare.py  page_export.py  page_features.py  page_jobs.py  page_mechanism.py  page_ml.py  page_msc.py  page_prep.py  page_segments.py  page_wizard.py
ogum-ml-lite/app/services/: __init__.py  ab.py  cache.py  cli_tools.py  i18n_lint.py  linkcheck.py  profiles.py  profiling.py  run_cli.py  state.py  telemetry.py  themes_loader.py  validators.py
ogum-ml-lite/docker/: Dockerfile  Dockerfile.api  Dockerfile.frontend  docker-compose.yml  nginx.conf  release_entrypoint.sh
ogum-ml-lite/docs/: DESIGN_SPEC_UX.md  MICROCOPY_en.yaml  MICROCOPY_pt.yaml  contributor_guide.md  index.md  mkdocs.yml  user_guide.md
ogum-ml-lite/docs/api_reference/: overview.md
ogum-ml-lite/docs/tutorials/: 01_msc.ipynb  02_segmentation.ipynb  03_ml.ipynb  04_compare.ipynb  05_sim.ipynb
ogum-ml-lite/notebooks/: README.md  ogum_ml_demo.ipynb  ogum_ml_derivatives_demo.ipynb  ogum_ml_ml_demo.ipynb
ogum-ml-lite/ogum_lite/: __init__.py  arrhenius.py  blaine.py  cli.py  exporters.py  features.py  io_mapping.py  jobs.py  maps.py  mechanism.py  ml_experiments.py  ml_hooks.py  preprocess.py  reports.py  scheduler.py  segmentation.py  stages.py  theta_msc.py  validators.py
ogum-ml-lite/ogum_lite/api/: main.py
ogum-ml-lite/ogum_lite/compare/: __init__.py  cli_compare.py  diff_core.py  loaders.py  reporters.py
ogum-ml-lite/ogum_lite/publish/: __init__.py  figshare_client.py  metadata.py  packer.py  workflow.py  zenodo_client.py
ogum-ml-lite/ogum_lite/sim/: __init__.py  adapters.py  cli_sim.py  features.py  linker.py  schema.py
ogum-ml-lite/ogum_lite/ui/: __init__.py  orchestrator.py  presets.py  workspace.py
ogum-ml-lite/server/: __init__.py  api_main.py  auth.py  models.py  storage.py
ogum-ml-lite/tests/: conftest.py  test_a11y_utils.py  test_ab_flags.py  test_api.py  test_arrhenius.py  test_auth.py  test_blaine.py  test_cache_profile.py  test_cli_integration.py  test_compare_diff.py  test_compare_loaders.py  test_compare_report.py  test_design.py  test_edu_exercises.py  test_edu_export.py  test_edu_simulators.py  test_exporters.py  test_features.py  test_frontend.py  test_i18n.py  test_i18n_lint.py  test_io_mapping.py  test_jobs.py  test_maps.py  test_mechanism.py  test_ml_experiments.py  test_ml_pipeline.py  test_msc.py  test_preprocess.py  test_presets.py  test_publish_figshare.py  test_publish_metadata.py  test_publish_packer.py  test_publish_zenodo.py  test_scheduler.py  test_segmentation.py  test_server_api.py  test_services.py  test_sim_adapters.py  test_sim_features.py  (+9 more)
tools/: bump_version.py  release_check.py
