[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ogum-ml-lite"
version = "0.1.0"
description = "Colab-friendly Ogum sintering toolkit"
authors = [{name = "Ogum ML Team"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "scikit-learn",
    "matplotlib",
    "joblib",
    "gradio",
    "openpyxl",
    "pydantic",
    "xlrd",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/huyraestevao/ogum-ml"
Repository = "https://github.com/huyraestevao/ogum-ml"
Issues = "https://github.com/huyraestevao/ogum-ml/issues"

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "pytest",
    "pytest-asyncio",
]

[tool.setuptools.packages.find]
include = ["ogum_lite"]

[tool.black]
line-length = 88
include = "\\.py$"

[tool.ruff]
line-length = 88
src = ["ogum_lite", "tests"]
exclude = ["notebooks/*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = []

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra"
testpaths = ["tests"]
