[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ogum-ml"
version = "1.0.0"
description = "Official Ogum-ML toolkit for master sintering curves, ML benchmarking and simulation"
authors = [{name = "Ogum ML Team"}]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = [
    "materials-science",
    "sintering",
    "master-sintering-curve",
    "machine-learning",
]
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "scikit-learn",
    "matplotlib",
    "joblib",
    "gradio",
    "streamlit",
    "plotly",
    "tenacity",
    "typing_extensions",
    "openpyxl",
    "pydantic",
    "fastapi",
    "uvicorn",
    "python-jose[cryptography]",
    "python-multipart",
    "requests",
    "xlrd",
    "pyyaml",
    "markdown2>=2.4,<3",
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/huyraestevao/ogum-ml"
Repository = "https://github.com/huyraestevao/ogum-ml"
Issues = "https://github.com/huyraestevao/ogum-ml/issues"
Documentation = "https://huyraestevao.github.io/ogum-ml/"

[project.scripts]
ogum-ml = "ogum_lite.cli:main"

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "pytest",
    "pytest-asyncio",
]
lgbm = ["lightgbm>=4,<5"]
cat = ["catboost>=1.2,<2"]
xgb = ["xgboost>=2,<3"]
sim = ["meshio>=5,<6"]
pdf = ["reportlab>=4,<5"]

[tool.setuptools.packages.find]
include = ["ogum_lite", "app", "server"]

[tool.black]
line-length = 88
include = "\\.py$"

[tool.ruff]
line-length = 88
src = ["ogum_lite", "tests"]
exclude = ["notebooks/*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = []

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra"
testpaths = ["tests"]
